Fix hide-off-screen bug for collaborators

--- a/_sass/pages/_research.scss
+++ b/_sass/pages/_research.scss
@@ -41,7 +41,7 @@
 
 #research-partners-list {
 
-	&.hide-off-screen {
+	&.hide-off-screen.collapsed {
 
 		#partners-list {
 
